dark mode button white background fixed

--- a/css/style.css
+++ b/css/style.css
@@ -212,6 +212,10 @@ body {
   background-color: #39FF14;
 }
 
+.dark-mode-btn-white{
+  background-color: white;
+}
+
 .dark-mode-icon {
   background-color: white;
 }
